2003-08-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Shader.h: Add default arguments for constructor,
	  which default to alpha channel only.

	* Mercator/ThresholdShader.cpp, Mercator/GrassShader.cpp,
	  Mercator/FillShader.cpp, Mercator/DepthShader.cpp:
	  Stop specifying arguements to the shader constructor, and thus
	  accept the defaults. Net effect is that surface buffers now
	  just contain alpha values by default.

2003-08-22 Damien McGinnes

	* Mercator/Segment.cpp: fixed edge and corner normals.

2003-08-17  Al Riddoch  <alriddoch@zepler.org>

	* Buffer_impl.h: Add to distribution.

	* Mercator/Segment.cpp: Make sure math functions are specified
	  as being from the global namespace, and add support for rintf
	  as its better than rint, and available under FreeBSD.

2003-08-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Buffer.h: Make segment this buffer is bound to public.

	* Mercator/Segment.cpp: Set m_min and m_max to values other
	  that 0, so that they end up with the right value.

	* Mercator/DepthShader.h, Mercator/DepthShader.cpp,
	  Mercator/FillShader.h, Mercator/FillShader.cpp,
	  Mercator/GrassShader.h, Mercator/GrassShader.cpp,
	  Mercator/ThresholdShader.h, Mercator/ThresholdShader.cpp,
	  Mercator/Shader.h: Add virtual method to shaders to
	  allow a check whether the min and max values of a segment
	  intersect with the range affected by this shader.

	* Mercator/Surface.h, Mercator/Surface.cpp: Make shader
	  reference public, and add a check so that we only
	  shade surfaces where the shader usefully applies to the segment.

2003-08-15  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp: Add test for lrintf() which is more
	  suitable and faster than rint() on platforms which have it.

2003-08-14  Damien McGinnes

	* Mercator/Segment.cpp: use MersenneTwister from wfmath

2003-08-12  Al Riddoch  <alriddoch@zepler.org>

	* Update to use wfmath 0.3 for compatability with eris 1.2.